@@ -38,6 +38,10 @@ table, .table {
 	}
 }
 
+.lsx-hp-shadow {
+	box-shadow: 1px 1px 3px 0 rgba(0,0,0,0.24);
+}
+
 // Shooping List
 
 .shopping-list-container {
