@@ -9,7 +9,15 @@ $carbohydrates = get_post_meta( get_the_ID(), 'recipe_carbohydrates', true );
 $fibre         = get_post_meta( get_the_ID(), 'recipe_fibre', true );
 $fat           = get_post_meta( get_the_ID(), 'recipe_fat', true );
 ?>
+<?php if ( ( ! empty( $prep_time ) ) || ( ! empty( $cooking_time ) ) || ( ! empty( $serves ) ) || ( ! empty( $portion ) ) ) { ?>
 <table class="recipe-table cooking-info-table">
+	<?php if ( is_single() && is_singular( 'recipe' ) ) { ?>
+		<thead>
+			<tr>
+				<th>Cooking Info</th>
+			</tr>
+		</thead>
+	<?php } ?>
 	<tbody>
 		<?php
 		if ( 1 >= (int) $serves ) {
@@ -71,77 +79,85 @@ $fat           = get_post_meta( get_the_ID(), 'recipe_fat', true );
 		?>
 	</tbody>
 </table>
-<table class="recipe-table nutritional-info-table">
-	<tbody>
-		<?php
-		if ( ! empty( $energy ) ) {
-		?>
-		<tr class="energy">
-		<td><?php esc_html_e( 'Energy: ', 'lsx-health-plan' ); ?>&nbsp</td>
-			<td>
+<?php } ?>
+<?php if ( is_single() && is_singular( 'recipe' ) && ( ( ! empty( $energy ) ) || ( ! empty( $protein ) ) || ( ! empty( $carbohydrates ) ) || ( ! empty( $fibre ) ) || ( ! empty( $fat ) ) ) ) { ?>
+	<table class="recipe-table nutritional-info-table">
+		<thead>
+			<tr>
+				<th>Nutritional Info (per portion)</th>
+			</tr>
+		</thead>
+		<tbody>
 			<?php
-				echo wp_kses_post( $energy );
+			if ( ! empty( $energy ) ) {
 			?>
-			</td>
-		</tr>
-		<?php
-		}
-		?>
-		<?php
-		if ( ! empty( $protein ) ) {
-		?>
-		<tr class="protein">
-		<td><?php esc_html_e( 'Protein: ', 'lsx-health-plan' ); ?>&nbsp</td>
-			<td>
+			<tr class="energy">
+			<td><?php esc_html_e( 'Energy: ', 'lsx-health-plan' ); ?>&nbsp</td>
+				<td>
+				<?php
+					echo wp_kses_post( $energy );
+				?>
+				</td>
+			</tr>
 			<?php
-				echo wp_kses_post( $protein );
+			}
 			?>
-			</td>
-		</tr>
-		<?php
-		}
-		?>
-		<?php
-		if ( ! empty( $carbohydrates ) ) {
-		?>
-		<tr class="carbohydrates">
-		<td><?php esc_html_e( 'Carbohydrates: ', 'lsx-health-plan' ); ?>&nbsp</td>
-			<td>
 			<?php
-				echo wp_kses_post( $carbohydrates );
+			if ( ! empty( $protein ) ) {
 			?>
-			</td>
-		</tr>
-		<?php
-		}
-		?>
-		<?php
-		if ( ! empty( $fibre ) ) {
-		?>
-		<tr class="fibre">
-		<td><?php esc_html_e( 'Fibre: ', 'lsx-health-plan' ); ?>&nbsp</td>
-			<td>
+			<tr class="protein">
+			<td><?php esc_html_e( 'Protein: ', 'lsx-health-plan' ); ?>&nbsp</td>
+				<td>
+				<?php
+					echo wp_kses_post( $protein );
+				?>
+				</td>
+			</tr>
 			<?php
-				echo wp_kses_post( $fibre );
+			}
 			?>
-			</td>
-		</tr>
-		<?php
-		}
-		?>
-		<?php
-		if ( ! empty( $fat ) ) {
-		?>
-		<tr class="fat">
-		<td><?php esc_html_e( 'Fat: ', 'lsx-health-plan' ); ?>&nbsp</td>
-			<td>
 			<?php
-				echo wp_kses_post( $fat );
+			if ( ! empty( $carbohydrates ) ) {
 			?>
-			</td>
-		</tr>
-		<?php
-		}
-		?>
-	</tbody>
-</table>
+			<tr class="carbohydrates">
+			<td><?php esc_html_e( 'Carbohydrates: ', 'lsx-health-plan' ); ?>&nbsp</td>
+				<td>
+				<?php
+					echo wp_kses_post( $carbohydrates );
+				?>
+				</td>
+			</tr>
+			<?php
+			}
+			?>
+			<?php
+			if ( ! empty( $fibre ) ) {
+			?>
+			<tr class="fibre">
+			<td><?php esc_html_e( 'Fibre: ', 'lsx-health-plan' ); ?>&nbsp</td>
+				<td>
+				<?php
+					echo wp_kses_post( $fibre );
+				?>
+				</td>
+			</tr>
+			<?php
+			}
+			?>
+			<?php
+			if ( ! empty( $fat ) ) {
+			?>
+			<tr class="fat">
+			<td><?php esc_html_e( 'Fat: ', 'lsx-health-plan' ); ?>&nbsp</td>
+				<td>
+				<?php
+					echo wp_kses_post( $fat );
+				?>
+				</td>
+			</tr>
+			<?php
+			}
+			?>
+		</tbody>
+	</table>
+<?php } ?>
